--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Radar zrážok – Stabilný</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+  <title>Radar zrážok – MapLibre</title>
+  <link href="https://unpkg.com/maplibre-gl@3.6.2/dist/maplibre-gl.css" rel="stylesheet"/>
   <style>
     html, body, #map {
       height: 100%;
@@ -12,10 +12,6 @@
       margin: 0;
       padding: 0;
       overflow: hidden;
-    }
-    .leaflet-control-zoom,
-    .leaflet-control-attribution {
-      display: none;
     }
     #controls {
       position: fixed;
@@ -29,7 +25,7 @@
       align-items: center;
       justify-content: center;
       gap: 10px;
-      z-index: 9999;
+      z-index: 10;
       box-shadow: 0 0 10px rgba(0,0,0,0.6);
     }
     #controls button {
@@ -63,7 +59,7 @@
       border-radius: 12px;
       font-size: 18px;
       font-weight: bold;
-      z-index: 9999;
+      z-index: 10;
       box-shadow: 0 0 10px rgba(0,0,0,0.5);
       font-family: Arial, sans-serif;
     }
@@ -77,7 +73,7 @@
       border-top-left-radius: 5px;
       font-size: 11px;
       font-family: Arial, sans-serif;
-      z-index: 9999;
+      z-index: 10;
     }
     #attribution a {
       color: #66b3ff;
@@ -123,50 +119,25 @@
   <a href="https://www.rainviewer.com" target="_blank">RainViewer</a>
 </div>
 
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script src="https://unpkg.com/maplibre-gl@3.6.2/dist/maplibre-gl.js"></script>
 <script>
-  const savedPos = JSON.parse(localStorage.getItem("mapPos")) || null;
+  const savedPos = JSON.parse(localStorage.getItem("mapPos")) || {lng: 19.7, lat: 48.7, zoom: 7};
 
-  const map = L.map('map', {
-    zoomControl: false,
-    attributionControl: false,
-    preferCanvas: true
+  const map = new maplibregl.Map({
+    container: 'map',
+    style: 'https://demotiles.maplibre.org/style.json', // ✅ základná tmavá téma
+    center: [savedPos.lng, savedPos.lat],
+    zoom: savedPos.zoom,
+    attributionControl: false
   });
 
-  // ✅ Základná mapa + popisy
-  L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
-    subdomains: 'abcd',
-    maxZoom: 14
-  }).addTo(map);
-
-  L.tileLayer('https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png', {
-    subdomains: 'abcd',
-    maxZoom: 14,
-    zIndex: 999
-  }).addTo(map);
-
-  if (savedPos) {
-    map.setView([savedPos.lat, savedPos.lng], savedPos.zoom);
-  }
-
-  // ✅ Hranice Slovenska
-  fetch("slovakia_Regions_level_1.geojson")
-    .then(r => r.json())
-    .then(data => {
-      const geo = L.geoJSON(data, {
-        style: {color: "#00bfff", weight: 1.5, fillOpacity: 0}
-      }).addTo(map);
-      if (!savedPos) {
-        const padValue = window.innerWidth < 600 ? 0.05 : 0.25;
-        map.fitBounds(geo.getBounds().pad(padValue));
-      }
-    });
+  map.addControl(new maplibregl.NavigationControl({showCompass: false}), 'top-right');
 
   let radarFrames = [];
   let currentIndex = 0;
   let playInterval = null;
   const timeBox = document.getElementById("timeBox");
-  let radarLayer = L.tileLayer('', {opacity: 0.8}).addTo(map);
+  let radarLayerId = "radar-layer";
 
   function formatDate(timestamp) {
     const date = new Date(timestamp * 1000);
@@ -177,7 +148,24 @@
   function showFrame(index) {
     if (!radarFrames[index]) return;
     const url = `https://tilecache.rainviewer.com/v2/radar/${radarFrames[index].path}/256/{z}/{x}/{y}/4/1_1.png`;
-    radarLayer.setUrl(url);
+
+    if (map.getSource("radar")) {
+      map.getSource("radar").tiles = [url];
+      map.triggerRepaint();
+    } else {
+      map.addSource("radar", {
+        type: "raster",
+        tiles: [url],
+        tileSize: 256
+      });
+      map.addLayer({
+        id: radarLayerId,
+        type: "raster",
+        source: "radar",
+        paint: {"raster-opacity": 0.8}
+      });
+    }
+
     timeBox.textContent = formatDate(radarFrames[index].time);
   }
 
@@ -191,7 +179,9 @@
       });
   }
 
-  loadRadar();
+  map.on("load", () => {
+    loadRadar();
+  });
 
   document.getElementById("back").onclick = () => {
     currentIndex = (currentIndex - 1 + radarFrames.length) % radarFrames.length;
@@ -212,7 +202,7 @@
       playInterval = setInterval(() => {
         currentIndex = (currentIndex + 1) % radarFrames.length;
         showFrame(currentIndex);
-      }, 600); // stabilné prehrávanie
+      }, 600);
       document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/pause.png";
     }
   };
