--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Radar zrážok</title>
+  <title>Radar zrážok – MapLibre</title>
   <link href="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css" rel="stylesheet"/>
   <style>
     html, body, #map {
@@ -12,6 +12,7 @@
       margin: 0;
       padding: 0;
       overflow: hidden;
+      background: #0b0b0b; /* ✅ tmavé pozadie namiesto bieleho efektu */
     }
     #controls {
       position: fixed;
@@ -82,25 +83,6 @@
     #attribution a:hover {
       text-decoration: underline;
     }
-    @media (max-width: 600px) {
-      #controls {
-        bottom: 65px;
-        padding: 10px 14px;
-        gap: 8px;
-      }
-      #controls button {
-        width: 44px;
-        height: 44px;
-      }
-      #controls img {
-        width: 20px;
-        height: 20px;
-      }
-      #timeBox {
-        font-size: 16px;
-        padding: 6px 14px;
-      }
-    }
   </style>
 </head>
 <body>
@@ -121,12 +103,6 @@
 
 <script src="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js"></script>
 <script>
-  const savedPos = JSON.parse(localStorage.getItem("mapPos")) || {
-    lng: 19.7,
-    lat: 48.7,
-    zoom: 7
-  };
-
   const map = new maplibregl.Map({
     container: 'map',
     style: {
@@ -154,20 +130,20 @@
         }
       },
       layers: [
-        { id: "dark-layer", type: "raster", source: "dark", paint: {} },
-        { id: "labels-layer", type: "raster", source: "labels", paint: {"raster-opacity": 1} }
+        { id: "dark", type: "raster", source: "dark", minzoom: 0, maxzoom: 22 },
+        { id: "labels", type: "raster", source: "labels", minzoom: 0, maxzoom: 22 }
       ]
     },
-    center: [savedPos.lng, savedPos.lat],
-    zoom: savedPos.zoom,
-    fadeDuration: 0
+    center: [19.7, 48.7],
+    zoom: 7,
+    fadeDuration: 0, ✅ 
+    attributionControl: false
   });
 
   let radarFrames = [];
   let currentIndex = 0;
   let playInterval = null;
-  let radarSourceAdded = false;
-
+  let radarLayer = null;
   const timeBox = document.getElementById("timeBox");
 
   function formatDate(timestamp) {
@@ -180,19 +156,21 @@
     if (!radarFrames[index]) return;
     const url = `https://tilecache.rainviewer.com/v2/radar/${radarFrames[index].path}/256/{z}/{x}/{y}/4/1_1.png`;
 
-    if (!radarSourceAdded) {
-      map.addSource("radar", {
-        type: "raster",
-        tiles: [url],
-        tileSize: 256
-      });
-      map.addLayer({id: "radar-layer", type: "raster", source: "radar", paint: {"raster-opacity": 0.8}});
-      radarSourceAdded = true;
-    } else {
-      map.getSource("radar").tiles = [url];
-      map.style.sourceCaches["radar"].clearTiles();
-      map.style.sourceCaches["radar"].update(map.transform);
-    }
+    if (radarLayer) map.removeLayer('radar');
+    if (map.getSource('radar')) map.removeSource('radar');
+
+    map.addSource('radar', {
+      type: 'raster',
+      tiles: [url],
+      tileSize: 256
+    });
+
+    map.addLayer({
+      id: 'radar',
+      type: 'raster',
+      source: 'radar',
+      paint: { 'raster-opacity': 0.8 }
+    });
 
     timeBox.textContent = formatDate(radarFrames[index].time);
   }
@@ -213,12 +191,10 @@
     currentIndex = (currentIndex - 1 + radarFrames.length) % radarFrames.length;
     showFrame(currentIndex);
   };
-
   document.getElementById("next").onclick = () => {
     currentIndex = (currentIndex + 1) % radarFrames.length;
     showFrame(currentIndex);
   };
-
   document.getElementById("play").onclick = () => {
     if (playInterval) {
       clearInterval(playInterval);
@@ -228,17 +204,11 @@
       playInterval = setInterval(() => {
         currentIndex = (currentIndex + 1) % radarFrames.length;
         showFrame(currentIndex);
-      }, 400);
+      }, 500);
       document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/pause.png";
     }
   };
-
   document.getElementById("refresh").onclick = () => loadRadar();
-
-  map.on("moveend", () => {
-    const center = map.getCenter();
-    localStorage.setItem("mapPos", JSON.stringify({lat: center.lat, lng: center.lng, zoom: map.getZoom()}));
-  });
 </script>
 </body>
 </html>
