--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Radar zrážok – MapLibre</title>
-  <link href="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css" rel="stylesheet"/>
+  <title>Radar zrážok – Stabilný</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
     html, body, #map {
       height: 100%;
@@ -12,7 +12,11 @@
       margin: 0;
       padding: 0;
       overflow: hidden;
-      background: #0b0b0b; ✅ 
+      background: #000; /* pre hladký začiatok */
+    }
+    .leaflet-control-zoom,
+    .leaflet-control-attribution {
+      display: none;
     }
     #controls {
       position: fixed;
@@ -83,6 +87,25 @@
     #attribution a:hover {
       text-decoration: underline;
     }
+    @media (max-width: 600px) {
+      #controls {
+        bottom: 65px;
+        padding: 10px 14px;
+        gap: 8px;
+      }
+      #controls button {
+        width: 44px;
+        height: 44px;
+      }
+      #controls img {
+        width: 20px;
+        height: 20px;
+      }
+      #timeBox {
+        font-size: 16px;
+        padding: 6px 14px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -101,50 +124,49 @@
   <a href="https://www.rainviewer.com" target="_blank">RainViewer</a>
 </div>
 
-<script src="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js"></script>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-  const map = new maplibregl.Map({
-    container: 'map',
-    style: {
-      version: 8,
-      sources: {
-        "dark": {
-          type: "raster",
-          tiles: [
-            "https://a.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png",
-            "https://b.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png",
-            "https://c.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png",
-            "https://d.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png"
-          ],
-          tileSize: 256
-        },
-        "labels": {
-          type: "raster",
-          tiles: [
-            "https://a.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png",
-            "https://b.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png",
-            "https://c.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png",
-            "https://d.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png"
-          ],
-          tileSize: 256
-        }
-      },
-      layers: [
-        { id: "dark", type: "raster", source: "dark", minzoom: 0, maxzoom: 22 },
-        { id: "labels", type: "raster", source: "labels", minzoom: 0, maxzoom: 22 }
-      ]
-    },
-    center: [19.7, 48.7],
-    zoom: 7,
-    fadeDuration: 0, ✅ 
-    attributionControl: false
+  const savedPos = JSON.parse(localStorage.getItem("mapPos")) || null;
+
+  const map = L.map('map', {
+    zoomControl: false,
+    attributionControl: false,
+    preferCanvas: true
   });
+
+  // ✅ OSM Dark – stabilné
+  L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
+    subdomains: 'abcd',
+    maxZoom: 14
+  }).addTo(map);
+
+  // ✅ vrstva s názvami miest (jasnejšie zobrazenie)
+  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    opacity: 0.5,
+    zIndex: 999
+  }).addTo(map);
+
+  if (savedPos) {
+    map.setView([savedPos.lat, savedPos.lng], savedPos.zoom);
+  }
+
+  fetch("slovakia_Regions_level_1.geojson")
+    .then(r => r.json())
+    .then(data => {
+      const geo = L.geoJSON(data, {
+        style: {color: "#00bfff", weight: 1.5, fillOpacity: 0}
+      }).addTo(map);
+      if (!savedPos) {
+        const padValue = window.innerWidth < 600 ? 0.05 : 0.25;
+        map.fitBounds(geo.getBounds().pad(padValue));
+      }
+    });
 
   let radarFrames = [];
   let currentIndex = 0;
   let playInterval = null;
-  let radarLayer = null;
   const timeBox = document.getElementById("timeBox");
+  let radarLayer = L.tileLayer('', {opacity: 0.8}).addTo(map);
 
   function formatDate(timestamp) {
     const date = new Date(timestamp * 1000);
@@ -155,23 +177,7 @@
   function showFrame(index) {
     if (!radarFrames[index]) return;
     const url = `https://tilecache.rainviewer.com/v2/radar/${radarFrames[index].path}/256/{z}/{x}/{y}/4/1_1.png`;
-
-    if (radarLayer) map.removeLayer('radar');
-    if (map.getSource('radar')) map.removeSource('radar');
-
-    map.addSource('radar', {
-      type: 'raster',
-      tiles: [url],
-      tileSize: 256
-    });
-
-    map.addLayer({
-      id: 'radar',
-      type: 'raster',
-      source: 'radar',
-      paint: { 'raster-opacity': 0.8 }
-    });
-
+    radarLayer.setUrl(url);
     timeBox.textContent = formatDate(radarFrames[index].time);
   }
 
@@ -191,10 +197,12 @@
     currentIndex = (currentIndex - 1 + radarFrames.length) % radarFrames.length;
     showFrame(currentIndex);
   };
+
   document.getElementById("next").onclick = () => {
     currentIndex = (currentIndex + 1) % radarFrames.length;
     showFrame(currentIndex);
   };
+
   document.getElementById("play").onclick = () => {
     if (playInterval) {
       clearInterval(playInterval);
@@ -204,11 +212,17 @@
       playInterval = setInterval(() => {
         currentIndex = (currentIndex + 1) % radarFrames.length;
         showFrame(currentIndex);
-      }, 500);
+      }, 400);
       document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/pause.png";
     }
   };
+
   document.getElementById("refresh").onclick = () => loadRadar();
+
+  map.on("moveend", () => {
+    const center = map.getCenter();
+    localStorage.setItem("mapPos", JSON.stringify({lat: center.lat, lng: center.lng, zoom: map.getZoom()}));
+  });
 </script>
 </body>
 </html>
