--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8">
-  <title>Radar zrazok</title>
+  <title>Radar zrážok</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
     html, body, #map {
@@ -11,21 +11,16 @@
       margin: 0;
       padding: 0;
     }
-    .leaflet-control-zoom,
-    .leaflet-control-attribution {
-      display: none;
-    }
     #controls {
       position: fixed;
-      bottom: 100px;
+      bottom: 80px;
       left: 50%;
       transform: translateX(-50%);
       background: #072C4E;
       padding: 10px 16px;
       border-radius: 25px;
       display: flex;
-      align-items: center;
-      gap: 12px;
+      gap: 10px;
       z-index: 9999;
       box-shadow: 0 0 10px rgba(0,0,0,0.5);
     }
@@ -36,13 +31,9 @@
       height: 45px;
       border-radius: 50%;
       cursor: pointer;
-      transition: background 0.2s;
       display: flex;
       justify-content: center;
       align-items: center;
-    }
-    #controls button:hover {
-      background: #155A9C;
     }
     #controls img {
       width: 22px;
@@ -51,17 +42,16 @@
     }
     #timeBox {
       position: fixed;
-      bottom: 30px;
+      bottom: 25px;
       left: 50%;
       transform: translateX(-50%);
       background: #072C4E;
       color: white;
-      padding: 8px 20px;
-      border-radius: 15px;
-      font-size: 22px;
+      padding: 6px 14px;
+      border-radius: 12px;
+      font-size: 18px;
       font-weight: bold;
       z-index: 9999;
-      box-shadow: 0 0 10px rgba(0,0,0,0.5);
       font-family: Arial, sans-serif;
     }
     #attribution {
@@ -79,9 +69,6 @@
     #attribution a {
       color: #66b3ff;
       text-decoration: none;
-    }
-    #attribution a:hover {
-      text-decoration: underline;
     }
   </style>
 </head>
@@ -109,7 +96,12 @@
     maxZoom: 14
   }).addTo(map);
 
-  // ✅ Hranice Slovenska
+  L.tileLayer('https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png', {
+    subdomains: 'abcd',
+    maxZoom: 14,
+    zIndex: 999
+  }).addTo(map);
+
   fetch("slovakia_Regions_level_1.geojson")
     .then(r => r.json())
     .then(data => {
@@ -141,14 +133,11 @@
   function loadRadar() {
     radarLayers.forEach(layer => map.removeLayer(layer));
     radarLayers = [];
-
     fetch("https://api.rainviewer.com/public/weather-maps.json")
       .then(r => r.json())
       .then(data => {
         radarFrames = data.radar.past.concat(data.radar.nowcast);
-        // ✅ vždy posledný REÁLNY snímok (posledný z past)
         currentIndex = data.radar.past.length - 1;
-
         radarFrames.forEach((frame, i) => {
           const layer = L.tileLayer(
             `https://tilecache.rainviewer.com/v2/radar/${frame.path}/256/{z}/{x}/{y}/4/1_1.png`,
@@ -156,15 +145,12 @@
           ).addTo(map);
           radarLayers[i] = layer;
         });
-
         fadeToFrame(currentIndex);
       });
   }
 
-  // ✅ Načítanie pri spustení
   loadRadar();
 
-  // ✅ Ovládanie
   document.getElementById("back").onclick = () => {
     currentIndex = (currentIndex - 1 + radarFrames.length) % radarFrames.length;
     fadeToFrame(currentIndex);
