--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 </head>
 <body>
 <div id="map"></div>
+
 <div id="controls">
   <button id="back"><img src="https://img.icons8.com/ios-filled/50/rewind.png"></button>
   <button id="play"><img id="playIcon" src="https://img.icons8.com/ios-filled/50/play.png"></button>
@@ -97,47 +98,43 @@
   <button id="refresh"><img src="https://img.icons8.com/ios-filled/50/synchronize.png"></button>
 </div>
 <div id="timeBox">Načítavam čas...</div>
+
 <div id="attribution">
   Map data © <a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a> &amp;
   <a href="https://www.rainviewer.com" target="_blank">RainViewer</a>
 </div>
+
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-  const savedPos = JSON.parse(localStorage.getItem("mapPos")) || null
+  const savedPos = JSON.parse(localStorage.getItem("mapPos")) || null;
 
   const map = L.map('map', {
     zoomControl: false,
     attributionControl: false,
-    preferCanvas: true,
-    zoomAnimation: true,
-    zoomAnimationThreshold: 12,
-    zoomSnap: 0,
-    inertia: true
-  })
+    preferCanvas: true
+  });
 
   L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
     maxZoom: 14,
-    keepBuffer: 24,
-    unloadInvisibleTiles: false,
+    updateWhenDragging: true,
     updateWhenZooming: true,
     updateWhenIdle: false,
-    updateWhenDragging: true
-  }).addTo(map)
+    keepBuffer: 8
+  }).addTo(map);
 
   L.tileLayer('https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
     maxZoom: 14,
     opacity: 0.9,
-    keepBuffer: 24,
-    unloadInvisibleTiles: false,
     updateWhenDragging: true,
     updateWhenZooming: true,
-    updateWhenIdle: false
-  }).addTo(map)
+    updateWhenIdle: false,
+    keepBuffer: 8
+  }).addTo(map);
 
   if (savedPos) {
-    map.setView([savedPos.lat, savedPos.lng], savedPos.zoom)
+    map.setView([savedPos.lat, savedPos.lng], savedPos.zoom);
   }
 
   fetch("slovakia_Regions_level_1.geojson")
@@ -145,113 +142,89 @@
     .then(data => {
       const geo = L.geoJSON(data, {
         style: {color: "#00bfff", weight: 1.5, fillOpacity: 0}
-      }).addTo(map)
+      }).addTo(map);
       if (!savedPos) {
-        map.fitBounds(geo.getBounds().pad(0.25))
+        map.fitBounds(geo.getBounds().pad(0.25));
       }
-    })
+    });
 
-  let radarFrames = []
-  let radarLayers = []
-  let radarPreloadLayers = []
-  let currentIndex = 0
-  let playInterval = null
-  const timeBox = document.getElementById("timeBox")
+  let radarFrames = [];
+  let radarLayers = [];
+  let currentIndex = 0;
+  let playInterval = null;
+  const timeBox = document.getElementById("timeBox");
 
   function formatDate(timestamp) {
-    const date = new Date(timestamp * 1000)
-    const days = ["NE", "PO", "UT", "ST", "ŠT", "PI", "SO"]
-    return `${days[date.getDay()]} ${String(date.getDate()).padStart(2, '0')}.${String(date.getMonth() + 1).padStart(2, '0')}.${date.getFullYear()} o ${String(date.getHours()).padStart(2, '0')}:${String(date.getMinutes()).padStart(2, '0')}`
+    const date = new Date(timestamp * 1000);
+    const days = ["NE", "PO", "UT", "ST", "ŠT", "PI", "SO"];
+    return `${days[date.getDay()]} ${String(date.getDate()).padStart(2, '0')}.${String(date.getMonth() + 1).padStart(2, '0')}.${date.getFullYear()} o ${String(date.getHours()).padStart(2, '0')}:${String(date.getMinutes()).padStart(2, '0')}`;
   }
 
   function showFrame(index) {
     radarLayers.forEach((layer, i) => {
-      layer.setOpacity(i === index ? 0.8 : 0)
-    })
-    timeBox.textContent = formatDate(radarFrames[index].time)
-  }
-
-  function preloadZoomLevels(framePath) {
-    const baseUrl = `https://tilecache.rainviewer.com/v2/radar/${framePath}/256/{z}/{x}/{y}/4/1_1.png`
-    const currentZoom = map.getZoom()
-    const zoomsToPreload = [currentZoom - 1, currentZoom + 1]
-    zoomsToPreload.forEach(z => {
-      if (z >= 5 && z <= 14) {
-        const tmp = L.tileLayer(baseUrl, {
-          opacity: 0,
-          minZoom: z,
-          maxZoom: z,
-          keepBuffer: 24,
-          updateWhenDragging: true,
-          updateWhenZooming: true
-        }).addTo(map)
-        radarPreloadLayers.push(tmp)
-      }
-    })
+      layer.setOpacity(i === index ? 0.8 : 0);
+    });
+    timeBox.textContent = formatDate(radarFrames[index].time);
   }
 
   function loadRadar() {
-    radarLayers.forEach(layer => map.removeLayer(layer))
-    radarPreloadLayers.forEach(layer => map.removeLayer(layer))
-    radarLayers = []
-    radarPreloadLayers = []
+    radarLayers.forEach(layer => map.removeLayer(layer));
+    radarLayers = [];
     fetch("https://api.rainviewer.com/public/weather-maps.json")
       .then(r => r.json())
       .then(data => {
-        radarFrames = data.radar.past.concat(data.radar.nowcast)
-        currentIndex = data.radar.past.length - 1
+        radarFrames = data.radar.past.concat(data.radar.nowcast);
+        currentIndex = data.radar.past.length - 1;
         radarFrames.forEach((frame, i) => {
           const layer = L.tileLayer(
             `https://tilecache.rainviewer.com/v2/radar/${frame.path}/256/{z}/{x}/{y}/4/1_1.png`,
             {
               opacity: 0,
               crossOrigin: true,
-              keepBuffer: 24,
-              unloadInvisibleTiles: false,
               updateWhenDragging: true,
               updateWhenZooming: true,
-              updateWhenIdle: false
+              updateWhenIdle: false,
+              keepBuffer: 8
             }
-          ).addTo(map)
-          radarLayers.push(layer)
-        })
-        preloadZoomLevels(radarFrames[currentIndex].path)
-        showFrame(currentIndex)
-      })
+          ).addTo(map);
+          radarLayers.push(layer);
+        });
+        showFrame(currentIndex);
+      });
   }
 
-  loadRadar()
+  loadRadar();
 
   document.getElementById("back").onclick = () => {
-    currentIndex = (currentIndex - 1 + radarFrames.length) % radarFrames.length
-    showFrame(currentIndex)
-  }
+    currentIndex = (currentIndex - 1 + radarFrames.length) % radarFrames.length;
+    showFrame(currentIndex);
+  };
 
   document.getElementById("next").onclick = () => {
-    currentIndex = (currentIndex + 1) % radarFrames.length
-    showFrame(currentIndex)
-  }
+    currentIndex = (currentIndex + 1) % radarFrames.length;
+    showFrame(currentIndex);
+  };
 
   document.getElementById("play").onclick = () => {
     if (playInterval) {
-      clearInterval(playInterval)
-      playInterval = null
-      document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/play.png"
+      clearInterval(playInterval);
+      playInterval = null;
+      document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/play.png";
     } else {
       playInterval = setInterval(() => {
-        currentIndex = (currentIndex + 1) % radarFrames.length
-        showFrame(currentIndex)
-      }, 1500)
-      document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/pause.png"
+        currentIndex = (currentIndex + 1) % radarFrames.length;
+        showFrame(currentIndex);
+      }, 1500);
+      document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/pause.png";
     }
-  }
+  };
 
-  document.getElementById("refresh").onclick = () => loadRadar()
+  document.getElementById("refresh").onclick = () => loadRadar();
 
   map.on("moveend", () => {
-    const center = map.getCenter()
-    localStorage.setItem("mapPos", JSON.stringify({lat: center.lat, lng: center.lng, zoom: map.getZoom()}))
-  })
+    const center = map.getCenter();
+    localStorage.setItem("mapPos", JSON.stringify({lat: center.lat, lng: center.lng, zoom: map.getZoom()}));
+  });
 </script>
 </body>
 </html>
