--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8">
-  <title>Radar zrážok – Slovensko</title>
+  <title>Radar zrážok – Slovensko (optimalizované)</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
     html, body, #map {
@@ -103,31 +103,33 @@
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
+  const SLOVAK_BOUNDS = [
+    [47.7, 16.6], // juhozápad
+    [49.7, 22.5]  // severovýchod
+  ];
+
   const map = L.map('map', {
     zoomControl: false,
     attributionControl: false,
-    // ✅ Slovensko + malý buffer ~30 km
-    maxBounds: [
-      [47.05, 16.8],  // juhozápad (Rakúsko - Maďarsko)
-      [49.65, 22.55]  // severovýchod (Poľsko - Ukrajina)
-    ],
-    maxBoundsViscosity: 1.0
-  }).setView([48.7, 19.7], 7); // ✅ fix stred
+    maxBounds: SLOVAK_BOUNDS,
+    maxBoundsViscosity: 1.0,
+    noWrap: true
+  }).fitBounds(SLOVAK_BOUNDS);
 
   L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
-    maxZoom: 10,
-    minZoom: 6
+    maxZoom: 9,
+    minZoom: 7,
+    noWrap: true
   }).addTo(map);
 
   // ✅ Hranice Slovenska
   fetch("slovakia_Regions_level_1.geojson")
     .then(r => r.json())
     .then(data => {
-      const geo = L.geoJSON(data, {
+      L.geoJSON(data, {
         style: {color: "#00bfff", weight: 1.5, fillOpacity: 0}
       }).addTo(map);
-      map.fitBounds(geo.getBounds().pad(0.02)); // malý buffer
     });
 
   let radarFrames = [];
@@ -164,10 +166,8 @@
             `https://tilecache.rainviewer.com/v2/radar/${frame.path}/256/{z}/{x}/{y}/4/1_1.png`,
             {
               opacity: 0,
-              bounds: [
-                [47.05, 16.8],
-                [49.65, 22.55]
-              ]
+              noWrap: true,
+              bounds: SLOVAK_BOUNDS
             }
           ).addTo(map);
           radarLayers[i] = layer;
