--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8">
-  <title>Radar zrážok – Slovensko a okolie (opravené)</title>
+  <title>Radar zrážok – Slovensko a okolie</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
     html, body, #map {
@@ -12,7 +12,12 @@
       padding: 0;
       background: #000;
     }
-    .leaflet-control-zoom,
+    .leaflet-control-zoom {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 1000;
+    }
     .leaflet-control-attribution {
       display: none;
     }
@@ -105,22 +110,24 @@
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
   const MAP_BOUNDS = [
-    [45.8, 14.8],  // juhozápad – Slovinsko/Rakúsko
-    [51.0, 24.5]   // severovýchod – Poľsko/Ukrajina
+    [45.8, 14.8],  // juhozápad
+    [51.0, 24.5]   // severovýchod
   ];
 
   const map = L.map('map', {
-    zoomControl: false,
+    zoomControl: true,
     attributionControl: false,
     maxBounds: MAP_BOUNDS,
     maxBoundsViscosity: 1.0,
-    noWrap: true
+    noWrap: true,
+    minZoom: 6,  // ✅ najmenší zoom (celé okolie)
+    maxZoom: 9   // ✅ najväčší zoom (okresy)
   }).fitBounds(MAP_BOUNDS);
 
   // ✅ Podkladová mapa
   L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
-    maxZoom: 8,
+    maxZoom: 9,
     minZoom: 6,
     noWrap: true
   }).addTo(map);
@@ -153,32 +160,6 @@
     timeBox.textContent = formatDate(radarFrames[index].time);
   }
 
-  // ✅ Canvas maska (zobrazí len v definovanom rozsahu, mimo nič)
-  function createMaskedLayer(frame) {
-    return L.tileLayer.canvas({
-      async: true,
-      noWrap: true,
-      bounds: MAP_BOUNDS,
-      async drawTile: function(canvas, tilePoint, zoom) {
-        const ctx = canvas.getContext('2d');
-        const img = new Image();
-        img.crossOrigin = '';
-        img.src = `https://tilecache.rainviewer.com/v2/radar/${frame.path}/256/${zoom}/${tilePoint.x}/${tilePoint.y}/4/1_1.png`;
-
-        img.onload = () => {
-          ctx.clearRect(0, 0, 256, 256);
-          ctx.drawImage(img, 0, 0);
-
-          // ✅ Orezanie mimo rozsahu
-          ctx.globalCompositeOperation = 'destination-in';
-          ctx.fillStyle = 'rgba(255,255,255,1)';
-          ctx.fillRect(0, 0, 256, 256);
-          ctx.globalCompositeOperation = 'source-over';
-        };
-      }
-    });
-  }
-
   function loadRadar() {
     radarLayers.forEach(layer => map.removeLayer(layer));
     radarLayers = [];
@@ -190,8 +171,14 @@
         currentIndex = data.radar.past.length - 1;
 
         radarFrames.forEach((frame, i) => {
-          const layer = createMaskedLayer(frame).addTo(map);
-          layer.setOpacity(0);
+          const layer = L.tileLayer(
+            `https://tilecache.rainviewer.com/v2/radar/${frame.path}/256/{z}/{x}/{y}/4/1_1.png`,
+            {
+              opacity: 0,
+              noWrap: true,
+              bounds: MAP_BOUNDS
+            }
+          ).addTo(map);
           radarLayers[i] = layer;
         });
 
